--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet"></head>
 <body>
     <div class="header">
-        <div class="header-logo">Header Logo</div>
+
+        <div class="header-logo">
+            <p> Header Logo</p>
+        </div>
         <ul class="header-links">
             <li><a href="#" > link one </a></li>
             <li><a href="#" > link two </a></li>
